--- a/css/app.css
+++ b/css/app.css
@@ -10,6 +10,7 @@
   border: solid 1px black;
   display: flex;
   text-decoration: none;
+  height: 50px; /* find a better way to size this */
   &__type {
     margin: 0 10px;
   }
